Adjust the file structure to suit ArduinoIDE

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,22 +10,13 @@
 
 [platformio]
 boards_dir = ./board
+src_dir = examples/factory
 
-[env:esp32dev]
+[env:T-Track]
 platform = espressif32
-board = esp32-s3-t-amoled-1_1
+board = lilygo-t-track
 framework = arduino
 
-; board_build.partitions = huge_app.csv
 build_flags = 
-    -DLV_LVGL_H_INCLUDE_SIMPLE
     -DBOARD_HAS_PSRAM
     -UARDUINO_USB_CDC_ON_BOOT
-
-
-
-
-build_src_filter =
-  +<*>
-;   ; Force compile LVGL demo, remove when working on your own project
-  +<../lib/lvgl/demos>
