Added QWIIC Sensor example

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 boards_dir = ./board
 src_dir = examples/factory
+; src_dir = examples/QWIIC_Sesnsor
 
 [env:T-Track]
 platform = espressif32
@@ -19,4 +20,5 @@ framework = arduino
 
 build_flags = 
     -DBOARD_HAS_PSRAM
-    -UARDUINO_USB_CDC_ON_BOOT
+    ; -UARDUINO_USB_CDC_ON_BOOT
+    -DARDUINO_USB_CDC_ON_BOOT=1
